fix tab changing issues, and align "awards" tab

--- a/css/layout.css
+++ b/css/layout.css
@@ -145,11 +145,11 @@ h2 {
 
 .section .page {
   display: flex;
-  /*flex-direction: row;*/
+  /*flex-direction: row*/
   justify-content: flex-start;
   gap: 60px;
   /*background-color: white;*/
-  /*border: 2px solid black;*/
+  /*border: 2px solid black*/
   /*width: 100%;*/
   box-sizing: border-box;
 }
@@ -588,8 +588,9 @@ th {
 }
 
 .grid-item .img {
-  width: 12vw;
-  height: 16vw;
+  width: 200px;
+  height: 267px;
+  min-width: 150px;
   object-fit: cover;
   filter: drop-shadow(0 10px 10px rgba(0, 0, 0, 0.2));
   border: 5px solid ghostwhite;
@@ -603,13 +604,22 @@ th {
   box-sizing: border-box;
 }
 
-.grid-title {
-  display: flex;
-  /*background-color: #0a53be;*/
-  max-width: 300px;
-  box-sizing: border-box;
-  /*min-width: 250px;*/
+#awards .page > .grid-title {
+  width: 300px;
 }
+
+#awards .page > .column {
+  flex: 1;
+}
+
+@media (max-width: 64em) {
+  #awards .page > .grid-title,
+  #awards .page > .column {
+    width: 100%;
+  }
+}
+
+
 
 /* Style for the tab links */
 .tab-links {
